# record

./: .gitignore  AGENTS.md  README.md  biome.json  lefthook.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx  index.css  index.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  store.rs  tracker.rs  types.rs
apps/desktop/src-tauri/src/agent/: mod.rs  opencode.rs
apps/desktop/src-tauri/src/project/: mod.rs
apps/desktop/src-tauri/src/project/adapters/: browser.rs  jetbrains.rs  mod.rs  opencode.rs  teams.rs  terminal.rs  vscode.rs  xcode.rs
apps/desktop/src-tauri/src/project/adapters/dia/: atlassian.rs  azure.rs  claude.rs  github.rs  google.rs  localhost.rs  mod.rs  youtube.rs
apps/desktop/src/components/: AppDetailView.tsx  MonthlyView.tsx  OnboardingView.tsx  SettingsView.tsx  SpacesView.tsx  TodayView.tsx  WeeklyView.tsx
apps/desktop/src/lib/: api.ts  context.tsx
scripts/: notarize.sh
